# browser-use-api

./: .env.example  .gitignore  Dockerfile  pyproject.toml  railway.toml  setup_new_repo.sh
app/: agent.py  config.py  main.py  mcp_server.py  schemas.py
app/routers/: tasks.py
